// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - upgrade does not modify the state variables 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 187241,
}
`;

exports[`EthVault - upgrade does not modify the state variables 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 188037,
}
`;

exports[`EthVault - upgrade does not modify the state variables 3`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 187505,
}
`;

exports[`EthVault - upgrade does not modify the state variables 4`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 188289,
}
`;

exports[`EthVault - upgrade does not modify the state variables 5`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 187331,
}
`;

exports[`EthVault - upgrade works with valid call data 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 76331,
}
`;
